# 6FaceAnon-2

./: .gitignore  pyproject.toml  run.py
examples/: process_image.py  process_video.py
faceanon/: __init__.py  anonymizer.py  batch.py  camera.py  cli.py  config.py  datatypes.py  detector.py  engine.py  tracker.py  utils.py
tests/: test_anonymizer.py  test_batch.py  test_camera.py  test_engine.py  test_tracker.py  test_utils.py
