[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faceanon"
version = "0.1.0"
description = "Video privacy protection engine based on CenterFace face detection and tracking"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "opencv-python>=4.5",
    "onnxruntime>=1.12",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "onnx>=1.12",
]

[project.scripts]
faceanon = "faceanon.cli:main"

[tool.setuptools.packages.find]
include = ["faceanon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
